[package]
name = "solana-faucet-bin"
description = "Provides the `solana-faucet` binary"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { workspace = true }
log = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-faucet-interface = { workspace = true }
solana-keypair = "=2.2.1"
solana-logger = "=2.3.1"
solana-metrics = { workspace = true }
solana-version = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[bin]]
name = "solana-faucet"
path = "src/main.rs"

[lints]
workspace = true
