[package]
name = "agave-fuzzer"
version = "2.0.0"
description = "Fuzzer for the Agave validator"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
prost = "0.11.9"
prost-types = "0.11.9"
solana-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=2.0.0" }
solana-bpf-loader-program = { path = "../programs/bpf_loader", version = "=2.0.0" }
solana-compute-budget-program = { path = "../programs/compute-budget", version = "=2.0.0" }
solana-config-program = { path = "../programs/config", version = "=2.0.0" }
solana-loader-v4-program = { path = "../programs/loader-v4", version = "=2.0.0" }
solana-program-runtime = { path = "../program-runtime", version = "=2.0.0" }
solana-sdk = { path = "../sdk", version = "=2.0.0" }
solana-stake-program = { path = "../programs/stake", version = "=2.0.0" }
solana-system-program = { path = "../programs/system", version = "=2.0.0" }
solana-vote-program = { path = "../programs/vote", version = "=2.0.0" }
thiserror = "1.0.58"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dummy-for-ci-check = []

[build-dependencies]
prost-build = "0.11.9"

[patch.crates-io]
# We include the following crates as our dependencies from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They are included indirectly, for example, `account-decoder` depends on
#
#     solana-sdk = { workspace = true }
#
# and that is specified as
#
#     spl-token = "=3.5.0"
#
# in `../../Cargo.toml`.
#
# `spl-token`, in turn, depends on `solana-program`, which we explicitly specify
# above as a local path dependency:
#
#     solana-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `solana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `solana-program` and `solana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io solana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p solana-program` and/or `cargo update
# -p solana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `../../Cargo.toml`.  Please keep both comments
# and the overrides in sync.
solana-program = { path = "../sdk/program" }

[workspace]
