[package]
name = "solana-genesis"
documentation = "https://docs.rs/solana-genesis"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["agave-unstable-api"]
agave-unstable-api = []

[dependencies]
agave-feature-set = { workspace = true }
agave-snapshots = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-account = { workspace = true }
solana-bls-signatures = { workspace = true }
solana-clock = { workspace = true }
solana-cluster-type = { workspace = true }
solana-commitment-config = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-feature-gate-interface = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-genesis-config = { workspace = true }
solana-inflation = { workspace = true }
solana-keypair = { workspace = true }
solana-loader-v3-interface = { workspace = true }
solana-native-token = { workspace = true }
solana-poh-config = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-signer = { workspace = true }
solana-stake-interface = { workspace = true, features = ["borsh"] }
solana-time-utils = { workspace = true }
solana-version = { workspace = true }
solana-vote-program = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
solana-borsh = { workspace = true }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
solana-vote = { workspace = true }
