[package]
name = "geyser-consumer"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bs58 = "0.5"
geyser-shaq-queues = { path = "../geyser-shaq-queues" }
solana-pubkey = { workspace = true}

[lints]
workspace = true
