[package]
name = "agave-instant"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[features]
default = []
rdtsc = []

[lints]
workspace = true
