[package]
name = "agave-math-utils"
description = "Math utilities for Agave"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
num-traits = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
test-case = { workspace = true }

[lints]
workspace = true
