[package]
name = "agave-mesh-layer"
documentation = "https://docs.rs/agave-mesh-layer"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
agave-unstable-api = []

[dependencies]
bytes = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
raptorq = { workspace = true }
solana-gossip = { workspace = true }
solana-ledger = { workspace = true }
solana-metrics = { workspace = true }
solana-packet = { workspace = true }
solana-perf = { workspace = true }
solana-streamer = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
agave-logger = { workspace = true }
solana-gossip = { path = "../gossip", features = ["agave-unstable-api", "dev-context-only-utils"] }
solana-ledger = { path = "../ledger", features = ["agave-unstable-api", "dev-context-only-utils"] }

[lints]
workspace = true